# backup-tool

./: .gitignore  .gitmodules  Cargo.toml  build-release.bat  build.bat  config.templ.toml  config.toml  log.toml  rebuild.bat
src/: args.rs  main.rs  settings.rs  timer.rs
